@@ -95,8 +95,8 @@ static NSDictionary *dictForDescriptionWithName(NSString *defName)
 @implementation STEnvironmentDescription
 + (NSString *)defaultEnvironmentDescriptionName
 {
-    NSLog(@"WARNING: +[STEnvironmentDescription defaultEnvironmentDescriptionName:] is deprecated, "
-          @" use defaultDescriptionName: instead.");
+    NSLog(@"WARNING: +[STEnvironmentDescription defaultEnvironmentDescriptionName:]"
+          @" is deprecated, use defaultDescriptionName: instead.");
 
     return [self defaultDescriptionName];
 }
