@@ -1,3 +1,12 @@
+2012-11-03  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* Frameworks/StepTalk/STConversation.m (-runScriptFromString:,
+	-conversationWithEnvironment:language:, -initWithEnvironment:language:,
+	-environment):
+	* Frameworks/StepTalk/STEnvironmentDescription.m
+	  (defaultEnvironmentDescriptionName):
+	Fix typos and spacing in warning messages.
+
 2012-10-26  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
 	* Modules/GNUmakefile:
